Fix img gap and subtext

--- a/css/styles.css
+++ b/css/styles.css
@@ -93,7 +93,7 @@ ul {
 .img-container {
   display: flex;
   justify-content: center;
-  gap: 16px;
+  gap: 25px;
 }
 
 .img-text {
@@ -102,12 +102,12 @@ ul {
 }
 
 .img {
-  height: 20px;
+  height: 40px;
   width: 40px;
-  border: 4px solid #3882f6;
-  padding: 50px;
-  border-radius: 5px;
-
+  border: 3px solid #3882f6;
+  padding: 50px;  
+  border-radius: 15px;
+  margin-top: 40px;
 }
 
 .top-heading {
